# OSL-repo-extractor

./: .gitignore  CHANGELOG.md  Commit_100Entries.csv  GithubParser.py  Issue_com_test.csv  LICENSE  NAUOSL.py  PD_extractor.py  PR_100Entries.csv  README.md  README.txt  TEST_extractor.py  TODO.txt  commit_100Entries.csv  compress_driver.py  conf.py  config.txt  decompress_driver.py  email_parser.py  extractor.py  extractor_driver.py  extractor_monolith.py  jabref_11_commit.json  jabref_11_issue.json  jabref_11_pr.json  jabref_sample.txt  json_extractor.py  logger.py  main.py  notes.txt  old_ext.py  old_work_extractor.py  output.csv  paper_notes.txt  pyproject.toml  repo_input.txt  requirements.txt  setup.cfg  test.csv  test.java  (+3 more)
configs/: config_template.txt  extractor_all.txt  folke_all.txt  jabref.txt  jabref_100.txt  jabref_11.txt  jabref_2000.txt  jabref_full.txt  jabref_jmp_commit.txt  jabref_sample.txt  sociall_all.txt  test_all.txt  trouble.txt
doc/: github-repo-extractor.md  github_repo_extractor.txt
docs/: OSL-repo-extractor.md  README.md
editions/: base_extractor.py  base_working_extractor.py  broken_extractor.py  working_ext_v1.py
extractor_editions/: base_extractor.py  primary_extractor.py
gui/: launcher.py  main_window.py
json_files/: jabref_100commit_list.json  jabref_100issue_list.json  jabref_100pr_list.json  jabref_commit_list.json  jabref_issue_list.json  jabref_pr_list.json
log_files/: jabref_100_log.txt  jabref_100commit_log.txt  jabref_2000_log.txt  jabref_200_log.txt  jabref_full_log.txt  jabref_issue_log.txt  jabref_sample_log.txt  trouble.txt
notes/: extractor_log.txt  range_rows.txt
outputs/: templates.txt
prog_runs/: commits.csv  config_test.csv  extractor_all.csv  prs.csv  (+6 more)
(+195 files in other folders)
