[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osl-repo-extractor"
version = "0.4.0"
description = "Mine the GitHub Rest API v3."
readme = "README.md"
authors = [
  { name = "Jacob McAuley Penney", email = "jacobmpenney@gmail.com" }
]
requires-python = ">=3.11.9,<4.0"
dependencies = [
  "cerberus>=1.3.4,<2.0",
  "PyGithub>=1.57,<2.0",
  "PySide6>=6.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
