[tool.poetry]
name = "osl-repo-extractor"
version = "0.3.0"
description = "Mine the GitHub Rest API v3 for issue and PR data"
authors = ["Jacob McAuley Penney <jacobmpenney@gmail.com>",]
readme = "README.md"
authors = [
  { name = "Jacob McAuley Penney", email = "jacobmpenney@gmail.com" }
]
requires-python = ">=3.11.9,<4.0"
dependencies = [
  "cerberus>=1.3.4,<2.0",
  "PyGithub>=2.6",
  "PySide6>=6.5.0"
]

[tool.poetry.dependencies]
python = "3.11.9"
cerberus = "1.3.4"
pygithub = "1.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
